--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-base16ct = "0.2.0"
-base64ct = "1.6.0"
 blake2 = "0.10.6"
 blake3 = "1.4.0"
 digest = "0.10.7"
 hex-literal = "0.4.1"
+inquire = "0.6.2"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.96"
 sha2 = "0.10.6"
 sha3 = "0.10.8"
+strum = "0.24.1"
+strum_macros = "0.24.3"
+toml = "0.7.4"
